syntax_analyzer/cool.output
Terminals unused in grammar

   ERROR


State 50 conflicts: 1 shift/reduce
State 67 conflicts: 14 shift/reduce
State 124 conflicts: 14 shift/reduce
State 143 conflicts: 9 shift/reduce
State 147 conflicts: 14 shift/reduce
State 156 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | class_list error

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS error ';'

    8 feature_list: %empty
    9             | feature_list feature
   10             | feature_list error

   11 feature: OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expression ';'
   13        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   14        | error '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID '(' formal_list ')' ':' TYPEID '{' error '}' ';'

   16 formal_list: %empty
   17            | formal
   18            | formal_list ',' formal

   19 formal: OBJECTID ':' TYPEID

   20 expression_list: %empty
   21                | expression
   22                | expression_list ',' expression
   23                | expression_list expression

   24 expression: INT_CONST
   25           | STR_CONST
   26           | BOOL_CONST
   27           | OBJECTID
   28           | OBJECTID ASSIGN expression
   29           | expression '.' OBJECTID '(' expression_list ')'
   30           | OBJECTID '(' expression_list ')'
   31           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   32           | IF expression THEN expression ELSE expression FI
   33           | WHILE expression LOOP expression POOL
   34           | '{' block_expression_list '}'
   35           | LET let_body
   36           | CASE expression OF case_list ESAC
   37           | NEW TYPEID
   38           | ISVOID expression
   39           | '(' expression ')'
   40           | expression '+' expression
   41           | expression '-' expression
   42           | expression '*' expression
   43           | expression '/' expression
   44           | expression '<' expression
   45           | expression LE expression
   46           | expression '=' expression
   47           | NOT expression
   48           | '~' expression
   49           | '{' error '}'

   50 case_list: case
   51          | case_list case

   52 case: OBJECTID ':' TYPEID DARROW expression ';'

   53 block_expression_list: expression ';'
   54                      | block_expression_list expression ';'
   55                      | block_expression_list error ';'

   56 let_body: OBJECTID ':' TYPEID IN expression
   57         | OBJECTID ':' TYPEID ASSIGN expression IN expression
   58         | OBJECTID ':' TYPEID ',' let_body
   59         | OBJECTID ':' TYPEID ASSIGN expression ',' let_body
   60         | error ',' let_body


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 14 15 29 30 31 39
')' (41) 13 14 15 29 30 31 39
'*' (42) 42
'+' (43) 40
',' (44) 18 22 58 59 60
'-' (45) 41
'.' (46) 29 31
'/' (47) 43
':' (58) 11 12 13 14 15 19 52 56 57 58 59
';' (59) 5 6 7 11 12 13 14 15 52 53 54 55
'<' (60) 44
'=' (61) 46
'@' (64) 31
'{' (123) 5 6 13 14 15 34 49
'}' (125) 5 6 13 14 15 34 49
'~' (126) 48
error (256) 4 7 10 14 15 49 55 60
CLASS (258) 5 6 7
ELSE (259) 32
FI (260) 32
IF (261) 32
IN (262) 56 57
INHERITS (263) 6 7
LET (264) 35
LOOP (265) 33
POOL (266) 33
THEN (267) 32
WHILE (268) 33
CASE (269) 36
ESAC (270) 36
OF (271) 36
DARROW (272) 52
NEW (273) 37
ISVOID (274) 38
STR_CONST (275) 25
INT_CONST (276) 24
BOOL_CONST (277) 26
TYPEID (278) 5 6 7 11 12 13 14 15 19 31 37 52 56 57 58 59
OBJECTID (279) 11 12 13 15 19 27 28 29 30 31 52 56 57 58 59
ASSIGN (280) 12 28 57 59
NOT (281) 47
LE (282) 45
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4, on right: 1 3 4
class (48)
    on left: 5 6 7, on right: 2 3
feature_list (49)
    on left: 8 9 10, on right: 5 6 9 10
feature (50)
    on left: 11 12 13 14 15, on right: 9
formal_list (51)
    on left: 16 17 18, on right: 13 14 15 18
formal (52)
    on left: 19, on right: 17 18
expression_list (53)
    on left: 20 21 22 23, on right: 22 23 29 30 31
expression (54)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 49, on right: 12 13 14 21 22 23 28 29 31 32
    33 36 38 39 40 41 42 43 44 45 46 47 48 52 53 54 56 57 59
case_list (55)
    on left: 50 51, on right: 36 51
case (56)
    on left: 52, on right: 50 51
block_expression_list (57)
    on left: 53 54 55, on right: 34 54 55
let_body (58)
    on left: 56 57 58 59 60, on right: 35 58 59 60


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS error ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class
    4           | class_list . error

    error  shift, and go to state 7
    CLASS  shift, and go to state 1

    $end  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS error ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 6

    0 $accept: program $end .

    $default  accept


State 7

    4 class_list: class_list error .

    $default  reduce using rule 4 (class_list)


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS . error ';'

    error   shift, and go to state 11
    TYPEID  shift, and go to state 12


State 10

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 13


State 11

    7 class: CLASS TYPEID INHERITS error . ';'

    ';'  shift, and go to state 14


State 12

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 13

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature
   10             | feature_list . error

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


State 14

    7 class: CLASS TYPEID INHERITS error ';' .

    $default  reduce using rule 7 (class)


State 15

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 20


State 16

   10 feature_list: feature_list error .
   14 feature: error . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'

    '('  shift, and go to state 21

    $default  reduce using rule 10 (feature_list)


State 17

   11 feature: OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   13        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 22
    '('  shift, and go to state 23


State 18

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 24


State 19

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


State 20

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature
   10             | feature_list . error

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 25

    feature  go to state 19


State 21

   14 feature: error '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 16 (formal_list)

    formal_list  go to state 27
    formal       go to state 28


State 22

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 29


State 23

   13 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' error '}' ';'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 16 (formal_list)

    formal_list  go to state 30
    formal       go to state 28


State 24

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 25

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


State 26

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 27

   14 feature: error '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   18 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 28

   17 formal_list: formal .

    $default  reduce using rule 17 (formal_list)


State 29

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


State 30

   13 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID '(' formal_list . ')' ':' TYPEID '{' error '}' ';'
   18 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 37
    ','  shift, and go to state 34


State 31

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 32

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 33

   14 feature: error '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 39


State 34

   18 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 40


State 35

   12 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 55


State 36

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


State 37

   13 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID '(' formal_list ')' . ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 56


State 38

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 39

   14 feature: error '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 57


State 40

   18 formal_list: formal_list ',' formal .

    $default  reduce using rule 18 (formal_list)


State 41

   32 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 58


State 42

   35 expression: LET . let_body

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    let_body  go to state 61


State 43

   33 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 62


State 44

   36 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 63


State 45

   37 expression: NEW . TYPEID

    TYPEID  shift, and go to state 64


State 46

   38 expression: ISVOID . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 65


State 47

   25 expression: STR_CONST .

    $default  reduce using rule 25 (expression)


State 48

   24 expression: INT_CONST .

    $default  reduce using rule 24 (expression)


State 49

   26 expression: BOOL_CONST .

    $default  reduce using rule 26 (expression)


State 50

   27 expression: OBJECTID .
   28           | OBJECTID . ASSIGN expression
   30           | OBJECTID . '(' expression_list ')'

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    '('       [reduce using rule 27 (expression)]
    $default  reduce using rule 27 (expression)


State 51

   47 expression: NOT . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 68


State 52

   48 expression: '~' . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 69


State 53

   34 expression: '{' . block_expression_list '}'
   49           | '{' . error '}'

    error       shift, and go to state 70
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression             go to state 71
    block_expression_list  go to state 72


State 54

   39 expression: '(' . expression ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 73


State 55

   12 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   29 expression: expression . '.' OBJECTID '(' expression_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   40           | expression . '+' expression
   41           | expression . '-' expression
   42           | expression . '*' expression
   43           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 83


State 56

   13 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'
   15        | OBJECTID '(' formal_list ')' ':' . TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 84


State 57

   14 feature: error '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 85


State 58

   29 expression: expression . '.' OBJECTID '(' expression_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   32           | IF expression . THEN expression ELSE expression FI
   40           | expression . '+' expression
   41           | expression . '-' expression
   42           | expression . '*' expression
   43           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    THEN  shift, and go to state 86
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 59

   60 let_body: error . ',' let_body

    ','  shift, and go to state 87


State 60

   56 let_body: OBJECTID . ':' TYPEID IN expression
   57         | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   58         | OBJECTID . ':' TYPEID ',' let_body
   59         | OBJECTID . ':' TYPEID ASSIGN expression ',' let_body

    ':'  shift, and go to state 88


State 61

   35 expression: LET let_body .

    $default  reduce using rule 35 (expression)


State 62

   29 expression: expression . '.' OBJECTID '(' expression_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   33           | WHILE expression . LOOP expression POOL
   40           | expression . '+' expression
   41           | expression . '-' expression
   42           | expression . '*' expression
   43           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    LOOP  shift, and go to state 89
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 63

   29 expression: expression . '.' OBJECTID '(' expression_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   36           | CASE expression . OF case_list ESAC
   40           | expression . '+' expression
   41           | expression . '-' expression
   42           | expression . '*' expression
   43           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    OF   shift, and go to state 90
    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82


State 64

   37 expression: NEW TYPEID .

    $default  reduce using rule 37 (expression)


State 65

   29 expression: expression . '.' OBJECTID '(' expression_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   38           | ISVOID expression .
   40           | expression . '+' expression
   41           | expression . '-' expression
   42           | expression . '*' expression
   43           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 38 (expression)


State 66

   28 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 91


State 67

   30 expression: OBJECTID '(' . expression_list ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54
